# routes/comment.js
@@ -1,0 +1,8 @@
+const comment = require('../controller/comment')
+
+
+module.exports = function (app) {
+    app.post('/comment/create',comment.createcomment)
+    app.get('/comment/getcomment/:id',comment.getcomment)
+}
+    
